test/units/TypingSpec/invalid/types/case-foreign-constructor.algst
\(x : D0) -> case x of {
  D0 -> (),
  True -> (),
}
